@@ -29,6 +29,7 @@
 typedef struct {
 	char   data[UDPCOMM_PKTSZ];
 	struct sockaddr sender;
+	int             rx_sd;
 	void            *raw_mem;
 } __attribute__((may_alias)) UdpCommBSDPkt;
 
@@ -45,6 +46,7 @@ UdpCommBSDPkt *p;
 
 	p          = (UdpCommBSDPkt*)(BUFALIGN(p_raw) + PADSZ);
 	p->raw_mem = p_raw;
+	p->rx_sd   = -1;
 	return p;
 }
 
@@ -101,6 +103,7 @@ socklen_t          len;
 		if ( ppeerport )
 			*ppeerport = ntohs(sa->sin_addr.s_addr);
 	}
+	p->rx_sd = sd;
 	return p;
 }
 
@@ -118,10 +121,10 @@ udpCommRecv(int sd, int timeout_ms)
 }
 
 void
-udpCommReturnPacket(int sd, UdpCommPkt p0, int len)
+udpCommReturnPacket(UdpCommPkt p0, int len)
 {
 UdpCommBSDPkt *p = (UdpCommBSDPkt *)p0;
-	sendto( sd, p->data, len, 0, &p->sender, sizeof(p->sender));
+	sendto( p->rx_sd, p->data, len, 0, &p->sender, sizeof(p->sender));
 }
 
 int
